--- a/ShortestPathFinder/ShortestPathFinder.csproj
+++ b/ShortestPathFinder/ShortestPathFinder.csproj
@@ -60,6 +60,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Application.cs" />
+    <Compile Include="InputHelper.cs" />
     <Compile Include="Node.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
