--- a/ShortestPathFinderTests/ShortestPathFinderTests.csproj
+++ b/ShortestPathFinderTests/ShortestPathFinderTests.csproj
@@ -52,6 +52,7 @@
   </Choose>
   <ItemGroup>
     <Compile Include="ApplicationTests.cs" />
+    <Compile Include="DijkstraFTWTests.cs" />
     <Compile Include="InputHelperTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="StandardIORedirecter.cs" />
